--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "author": "Brian Reilly",
     "repository": "https://github.com/Briles/Base16Mixer",
     "license": "MIT",
-    "dependencies":
-    {
+    "dependencies": {
         "js-yaml": "3.5.2",
+        "lodash": "4.0.0",
         "tinycolor2": "1.3.0"
     }
 }
