--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "b16m",
-    "description": "Mix colors from two base16 color schemes",
-    "author": "Brian Reilly",
-    "repository": "https://github.com/Briles/Base16Mixer",
-    "license": "MIT",
-    "dependencies": {
-        "js-yaml": "3.5.2",
-        "lodash": "4.0.0",
-        "tinycolor2": "1.3.0"
-    }
+  "name": "b16m",
+  "description": "Mix colors from two base16 color schemes",
+  "author": "Brian Reilly",
+  "repository": "https://github.com/Briles/Base16Mixer",
+  "license": "MIT",
+  "dependencies": {
+    "js-yaml": "^3.5.5",
+    "lodash": "^4.6.1",
+    "tinycolor2": "^1.3.0"
+  }
 }
