--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "b16m",
+  "main": "b16m.js",
+  "bin" : {
+    "b16m" : "./index.js",
+    "b16mbatch" : "./batch.js"
+  },
   "description": "Mix colors from two base16 color schemes",
   "author": "Brian Reilly",
   "repository": "https://github.com/Briles/Base16Mixer",
   "license": "MIT",
   "dependencies": {
-    "js-yaml": "^3.5.5",
-    "lodash": "^4.9.0",
+    "js-yaml": "^3.6.0",
+    "lodash.clone": "^4.3.2",
+    "lodash.includes": "^4.1.2",
+    "lodash.mergewith": "^4.3.5",
+    "lodash.sorteduniq": "^4.0.2",
     "tinycolor2": "^1.3.0"
   }
 }
