--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "b16m",
   "main": "b16m.js",
-  "bin" : {
-    "b16m" : "./index.js",
-    "b16mbatch" : "./batch.js"
+  "bin": {
+    "b16m": "./index.js",
+    "b16mbatch": "./batch.js"
+  },
+  "scripts": {
+    "test": "npm run test:main",
+    "test:main": "./node_modules/.bin/mocha ./test/test.js",
+    "cover": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha"
   },
   "description": "Mix colors from two base16 color schemes",
   "author": "Brian Reilly",
@@ -16,5 +21,10 @@
     "lodash.mergewith": "^4.3.5",
     "lodash.sorteduniq": "^4.0.2",
     "tinycolor2": "^1.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "istanbul": "~0.4.3",
+    "mocha": "^2.4.5"
   }
 }
