--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,8 @@ before_install:
   npm install -g npm@2.15.1
 install:
   - npm install
+  - npm install -g codecov
 script:
   - npm test
+  - ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec
+  - codecov
